[package]
name = "htpp"
version = "0.3.3"
edition = "2021"
authors=["Basel"]
description="A simple, fast, and secure http parser. It strictly adheres to the http specification. It can also parse URLs including query parameters"
keywords=["http", "parser"]
repository="https://github.com/Albassel/htpp"
license="MIT"
exclude = [
    "benches/parse.rs",
    "src/tests.rs",
    ".gitignore",
    "README.md"
]
documentation="https://docs.rs/htpp/latest/htpp/"


[[bench]]
harness = false
path = "benches/parse.rs"
name = "parse"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

